# test-hw-accel

./: .gitignore  CMakeLists.txt  Readme.md  bin.py
src/: AL_Operations.S  accelerator_bsp.c  accelerator_bsp.h  action.c  action.h  boolean.h  main.c  maze.c  maze.h  reinforcement_learning.c  reinforcement_learning.h  timer_bsp.c  timer_bsp.h  utils.c  utils.h
